# Active-Spectral-Defense-V2

./: Cargo.toml  LICENSE  README.md  asd.example.toml  asd.toml
bridges/asd-clamav-bridge/: Cargo.toml
bridges/asd-clamav-bridge/src/: lib.rs
bridges/asd-firewall-sync/: Cargo.toml
bridges/asd-firewall-sync/src/: lib.rs
bridges/asd-spectral-bridge/: Cargo.toml
bridges/asd-spectral-bridge/src/: lib.rs
bridges/asd-xdp-bridge/: Cargo.toml
bridges/asd-xdp-bridge/src/: lib.rs
components/active-siem/: Cargo.toml  README.md
components/active-siem/crates/ontology-engine/: Cargo.toml
components/active-siem/crates/ontology-engine/src/: engine.rs  error.rs  lib.rs  main.rs  types.rs
components/active-siem/crates/ontology-engine/tests/: integration_test.rs
components/active-siem/crates/review-queue/: Cargo.toml
components/active-siem/crates/review-queue/src/: alert.rs  containment.rs  engine_bridge.rs  error.rs  lib.rs  main.rs  queue.rs  schema.rs  store.rs  trigger.rs  types.rs
components/active-siem/crates/review-queue/tests/: categorical_isolation_review.rs
components/active-siem/crates/siem-collector/: Cargo.toml
components/active-siem/crates/siem-collector/src/: lib.rs
components/active-siem/crates/siem-core/: Cargo.toml
components/active-siem/crates/siem-core/src/: lib.rs
components/active-siem/crates/siem-correlation/: Cargo.toml
components/active-siem/crates/siem-correlation-bridge/: Cargo.toml
components/active-siem/crates/siem-correlation-bridge/src/: lib.rs
components/active-siem/crates/siem-correlation-bridge/tests/: end_to_end.rs
components/active-siem/crates/siem-correlation/src/: lib.rs
components/active-siem/crates/siem-ml/: Cargo.toml
components/active-siem/crates/siem-ml/src/: classifier.rs  lib.rs
components/active-siem/crates/siem-ml/tests/: categorical_isolation.rs  infiltration_dataset.rs
components/active-siem/crates/siem-notify/: Cargo.toml
components/active-siem/crates/siem-notify/src/: lib.rs
components/active-siem/crates/siem-response/: Cargo.toml
components/active-siem/crates/siem-response/src/: lib.rs
components/active-siem/crates/siem-review/: Cargo.toml
components/active-siem/crates/siem-review/src/: lib.rs
components/active-siem/crates/siem-rules/: Cargo.toml
components/active-siem/crates/siem-rules/src/: lib.rs
components/active-siem/crates/siem-server/: Cargo.toml
components/active-siem/crates/siem-server/src/: main.rs
components/active-siem/crates/siem-store/: Cargo.toml
components/active-siem/crates/siem-store/src/: convert.rs  error.rs  lib.rs  schema.rs  store.rs
components/active-siem/crates/siem-store/tests/: postgres_integration.rs
components/firewall-perimeter/: Cargo.toml  README.md  rustwall.example.toml
components/firewall-perimeter/src/: chan.rs  config.rs  conntrack.rs  engine.rs  ingestion.rs  log_gate.rs  logging.rs  main.rs  metrics.rs  nfqueue.rs  os_firewall.rs  packet.rs  quarantine.rs  rate_limit.rs  reject.rs  sync_worker.rs  threshold.rs
components/nsm-xdp/: .gitignore  Cargo.toml  README.md
components/nsm-xdp/scripts/: build-ebpf.sh  nsm.service  test-xdp-integration.py  test-xdp-integration.sh
components/nsm-xdp/src/: alert.rs  capture.rs  flow.rs  main.rs  packet.rs  sim.rs
components/nsm-xdp/src/detect/: beacon.rs  dns_tunnel.rs  mod.rs  portscan.rs  signature.rs  synflood.rs
components/nsm-xdp/src/xdp/: mod.rs
components/nsm-xdp/xdp/nsm-common/: Cargo.toml
components/nsm-xdp/xdp/nsm-common/src/: lib.rs
components/nsm-xdp/xdp/nsm-ebpf/: Cargo.toml
components/nsm-xdp/xdp/nsm-ebpf/src/: main.rs
components/rust-clam/: .gitignore  Cargo.toml  Dockerfile  README.md
components/rust-clam/.github/workflows/: ci.yml
components/rust-clam/crates/archive-guard/: Cargo.toml
components/rust-clam/crates/archive-guard/src/: lib.rs
components/rust-clam/crates/pe-analyze/: Cargo.toml
components/rust-clam/crates/pe-analyze/src/: lib.rs
components/rust-clam/crates/rclam-cli/: Cargo.toml
components/rust-clam/crates/rclam-cli/src/: main.rs
components/rust-clam/crates/rclam-daemon/: Cargo.toml
components/rust-clam/crates/rclam-daemon/src/: allowlist.rs  limits.rs  main.rs  metrics.rs
components/rust-clam/crates/rclam-quarantine/: Cargo.toml
components/rust-clam/crates/rclam-quarantine/src/: lib.rs
components/rust-clam/crates/rclam-watch/: Cargo.toml
components/rust-clam/crates/rclam-watch/src/: lib.rs  main.rs
components/rust-clam/crates/scanner-core/: Cargo.toml
components/rust-clam/crates/scanner-core/src/: lib.rs
components/rust-clam/crates/sig-engine/: Cargo.toml
components/rust-clam/crates/sig-engine/proptest-regressions/: engine.txt
components/rust-clam/crates/sig-engine/src/: engine.rs  error.rs  hashdb.rs  hexsig.rs  lib.rs
components/rust-clam/deploy/: rclamd.service
components/rust-clam/fuzz/: Cargo.toml  README.md
components/rust-clam/fuzz/fuzz_targets/: fuzz_7z_extract.rs  fuzz_cab_extract.rs  fuzz_gzip_extract.rs  fuzz_hashdb.rs  fuzz_hexsig_ndb.rs  fuzz_pe_parse.rs  fuzz_tar_extract.rs  fuzz_zip_extract.rs
components/rust-clam/sig-update/: Cargo.toml
components/rust-clam/sig-update/src/: apply.rs  lib.rs  manifest.rs  verify.rs
components/rust-clam/signatures/: sample.hdb  sample.ndb
components/spec-engine/: Cargo.toml  README.md
components/spec-engine/src/: jacobi_ds.rs  l7_entropy.rs  laplacian_regularizer.rs  lib.rs  main.rs  spectral_homology.rs
components/spec-engine/src/spectral_graph/: embedding.rs  error.rs  graph.rs  mod.rs  poly_filter.rs  report.rs
harness/containment-demo/: Cargo.toml
harness/containment-demo/src/: main.rs
orchestrator/: Cargo.toml
orchestrator/src/: config.rs  containment.rs  main.rs
persistence/: SETUP.md  n8n-workflow-asd-alerts.json  schema.sql
persistence/ingester/: ingest.mjs  package-lock.json  package.json
persistence/webhook-stub/: stub.mjs
