[workspace]
# The main `nsm` package (below) is itself a workspace member so
# `xdp/nsm-common` -- shared between it and the standalone `nsm-ebpf`
# crate -- resolves through one lockfile alongside it. `xdp/nsm-ebpf`
# and `xdp/xtask`-style tooling are NOT members: they target
# `bpfel-unknown-none`/nightly and build separately via
# `scripts/build-ebpf.sh` (see that file's header comment for why).
members = [".", "xdp/nsm-common"]
resolver = "2"

[package]
name = "nsm"
version = "0.1.0"
edition = "2021"
description = "Lightweight Network Security Monitor (NSM) in Rust"

[[bin]]
name = "nsm"
path = "src/main.rs"

[dependencies]
pnet = "0.34"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net", "io-util"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
once_cell = "1.19"
nsm-common = { path = "xdp/nsm-common" }
bytemuck = "1.14"
ipnetwork = "0.20"

# aya (and its bpf-syscall-based userspace loader) only builds on
# Linux; kept target-scoped and optional so `cargo build` on macOS/
# Windows never touches it, `--xdp` CLI flags disappear from `--help`
# there, and the pnet capture path remains the only option.
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", optional = true }
# For dropping capabilities after XDP attach -- see
# src/xdp/mod.rs::drop_privileges(). Small, stable, widely-used crate
# wrapping the raw capset()/capget()/prctl(PR_CAPBSET_DROP) syscalls.
caps = { version = "0.5", optional = true }

[features]
# Off by default: enabling it on Linux pulls in aya and compiles
# src/xdp/mod.rs + the --xdp* CLI flags. It does NOT build the eBPF
# object itself -- that's `scripts/build-ebpf.sh`, run separately with
# a nightly toolchain (see README "Building the eBPF/XDP program").
xdp = ["dep:aya", "dep:caps"]

[profile.release]
opt-level = 3
lto = true
