[workspace]
resolver = "2"
members = [
    "crates/sig-engine",
    "crates/scanner-core",
    "crates/archive-guard",
    "crates/pe-analyze",
    "crates/rclam-daemon",
    "crates/rclam-cli",
    "crates/rclam-quarantine",
    "crates/rclam-watch",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
