[package]
name = "sig-update"
version = "0.1.0"
edition = "2021"
publish = false

# Detached from the main workspace deliberately (see the empty [workspace]
# table below), same reasoning as fuzz/: this is an operational utility
# that isn't linked into rclamd itself, and its dependencies (ed25519-dalek,
# ureq/rustls) have a higher MSRV than the daemon's own dependency set is
# pinned to. Keeping it a separate workspace means updating this tool's
# dependencies can never accidentally raise the MSRV the daemon itself has
# to build under.
[workspace]

[lib]
name = "sig_update"
path = "src/lib.rs"

[[bin]]
name = "rclam-sigupdate"
path = "src/bin/rclam_sigupdate.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"
thiserror = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }
clap = { version = "=4.4.18", features = ["derive"] }
tempfile = "3.10.1"

[dev-dependencies]
tempfile = "3.10.1"
rcgen = "0.12"
rustls = "0.21"
