[package]
name = "ontology_engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Production-grade in-memory ontology / knowledge-graph engine (objects, links, schema validation, indexed traversal)."

[dependencies]
thiserror = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[bin]]
name = "ontology_engine"
path = "src/main.rs"

[lib]
name = "ontology_engine"
path = "src/lib.rs"

