[package]
name = "review_queue"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Human-in-the-loop audit/review gate for classifier predictions, sitting between an NDR classifier and containment execution. Backed by ontology_engine for the audit graph."

[dependencies]
ontology_engine = { path = "../ontology-engine" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[bin]]
name = "review_queue"
path = "src/main.rs"

[lib]
name = "review_queue"
path = "src/lib.rs"

