[package]
name = "siem-ml"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
siem-core = { path = "../siem-core" }
burn = { version = "0.13", default-features = false, features = ["std", "ndarray", "autodiff"] }
burn-ndarray = "0.13"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
