[package]
name = "siem-store"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "PostgreSQL persistence for siem-core's Event/Alert data model."

[dependencies]
siem-core = { path = "../siem-core" }
postgres = { version = "0.19", features = ["with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
