[package]
name = "rclam-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rclamd"
path = "src/main.rs"

[dependencies]
scanner-core = { path = "../scanner-core" }
sig-engine = { path = "../sig-engine" }
tokio = { version = "1.38", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "sync", "time"] }
clap = { version = "=4.4.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10.1"
