[package]
name = "rclam-quarantine"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
chacha20poly1305 = "0.10"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10.1"
