[package]
name = "rclam-watch"
version.workspace = true
edition.workspace = true

[lib]
name = "rclam_watch"
path = "src/lib.rs"

[[bin]]
name = "rclam-watch"
path = "src/main.rs"

[dependencies]
scanner-core = { path = "../scanner-core" }
sig-engine = { path = "../sig-engine" }
pe-analyze = { path = "../pe-analyze" }
rclam-quarantine = { path = "../rclam-quarantine" }
notify = "6"
clap = { version = "=4.4.18", features = ["derive"] }
ctrlc = "3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10.1"
