[package]
name = "scanner-core"
version.workspace = true
edition.workspace = true

[dependencies]
sig-engine = { path = "../sig-engine" }
archive-guard = { path = "../archive-guard" }
pe-analyze = { path = "../pe-analyze" }
memmap2 = "0.9"
rayon = "1.10.0"
walkdir = "2.5"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
md-5 = "0.10"
flate2 = "1.1"
tar = "0.4"
cab = "0.6"
sevenz-rust = "0.6"
